add tenants and other s
